--- a/docs/layouts/partials/header.html
+++ b/docs/layouts/partials/header.html
@@ -16,6 +16,12 @@
           Pricing
         </a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="https://coreui.requestshub.com/p/coreui-for-bootstrap/roadmap" target="blank" rel="noopener noreferrer">
+          Roadmap
+          {{ partial "icons/external-link.svg" (dict "class" "icon icon-sm ms-1") }}
+        </a>
+      </li>
     </ul>
     <div class="docs-search" id="docsearch"></div>
     <ul class="header-nav ms-3">
