--- a/scss/coreui.scss
+++ b/scss/coreui.scss
@@ -40,6 +40,7 @@
 @forward "offcanvas";
 @forward "placeholders";
 
+@forward "autocomplete";
 @forward "avatar";
 @forward "calendar";
 @forward "callout";
