--- a/scss/mixins/_forms.scss
+++ b/scss/mixins/_forms.scss
@@ -168,6 +168,7 @@
   }
 
   .input-group {
+    > .autocomplete:focus-within,
     > .date-picker:focus-within,
     > .time-picker:focus-within,
     > .form-multi-select:focus-within,
