--- a/docs/layouts/partials/stylesheet.html
+++ b/docs/layouts/partials/stylesheet.html
@@ -12,8 +12,9 @@
 {{- $sassOptions := dict "transpiler" "dartsass" "outputStyle" "expanded" "precision" 6 -}}
 {{- $postcssOptions := dict "use" "autoprefixer" "noMap" true -}}
 
-{{- $targetDocsCssPath := "/assets/css/docs.css" -}}
+{{- $targetDocsCssPath := "assets/css/docs.css" -}}
 {{- $targetSearchCssPath := "assets/css/search.css" -}}
+{{- $stylePickersCssPath := "assets/css/docs-pickers.css" -}}
 
 {{ if hugo.IsProduction -}}
   {{- $sassOptions = merge $sassOptions (dict "outputStyle" "compressed") -}}
@@ -21,7 +22,7 @@
 
 {{- $docsCss := resources.Get "scss/docs.scss" | toCSS (merge (dict "targetPath" $targetDocsCssPath) $sassOptions) | postCSS $postcssOptions -}}
 {{- $searchCss := resources.Get "scss/search.scss" | toCSS (merge (dict "targetPath" $targetSearchCssPath) $sassOptions) | postCSS $postcssOptions -}}
-{{- $stylePickers := resources.Get "scss/docs-pickers.scss" | toCSS (merge (dict "targetPath" $targetSearchCssPath) $sassOptions) | postCSS $postcssOptions -}}
+{{- $stylePickers := resources.Get "scss/docs-pickers.scss" | toCSS (merge (dict "targetPath" $stylePickersCssPath) $sassOptions) | postCSS $postcssOptions -}}
 
 <link href="{{ $docsCss.Permalink | relURL }}" rel="stylesheet">
 <link href="{{ $searchCss.Permalink | relURL }}" rel="stylesheet">
