chore: clean-up

--- a/docs/layouts/partials/header.html
+++ b/docs/layouts/partials/header.html
@@ -12,7 +12,7 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/pricing/">
+        <a class="nav-link" href="https://coreui.io/pricing/?framework=bootstrap&src=coreui-docs&cta=coreui-header-pricing">
           Pricing
         </a>
       </li>
